--- a/events/2024/02/20.md
+++ b/events/2024/02/20.md
@@ -11,3 +11,6 @@ Et ad hic unde sint vitae ea. Aut dolores distinctio ducimus quia dolor. Et vel 
 Consequatur laboriosam nulla repellendus quidem ut praesentium. Quia inventore atque assumenda neque et corporis ut. Dolores totam rerum sint consectetur sequi. Accusamus et voluptatem veniam fugit esse temporibus maxime voluptates. Sint facilis eligendi veritatis fugiat eos ut ut.
 
 Qui rem maxime modi velit qui similique iusto tenetur. Qui nostrum qui dolor ut. Accusantium et magni consequatur facilis totam. Modi vel ipsam ex. Et officia natus modi vel.
+
+
+![my image](/img/2024-04-20.png)
