--- a/events/2024/02/20.md
+++ b/events/2024/02/20.md
@@ -1,6 +1,7 @@
 ---
 title: 'Encuentro Abril 2024 COFOCHILEX UK'
-description: 'Encuentro Abril 2024 COFOCHILEX UK'
+description: 'Sábado 20 de Abril 2024'
+layout: 'event'
 ---
 
 Et voluptatem iusto sed quod maxime autem exercitationem. Similique sed labore amet natus non fugit fugit. Ut a in officiis. Laborum voluptas ea commodi provident quidem nemo.
