--- a/events/2024/05/18.md
+++ b/events/2024/05/18.md
@@ -1,18 +1,23 @@
 ---
-title: 'Encuentro Mayo 2024 COFOCHILEX UK'
-description: 'Sábado 18 de Mayo 2024'
+title: 'Encuentro Septiembre 2024 COFOCHILEX UK'
+description: 'Sábado 18 de Septiembre 2024'
 layout: 'event'
 ---
 
-Et voluptatem iusto sed quod maxime autem exercitationem. Similique sed labore amet natus non fugit fugit. Ut a in officiis. Laborum voluptas ea commodi provident quidem nemo.
 
-Quia praesentium assumenda aperiam id officiis cupiditate. Officiis eum facilis corporis voluptatem odio earum molestias laborum. Qui sapiente sit pariatur omnis. Et omnis saepe minus quibusdam. Aspernatur perspiciatis nihil qui dolor quia. Rerum rerum consequatur nam qui aspernatur qui.
 
-Et ad hic unde sint vitae ea. Aut dolores distinctio ducimus quia dolor. Et vel adipisci est. Voluptatem quisquam quam qui dolorem reprehenderit consequatur mollitia.
+Como organización, COFOCHILEX UK tuvo el honor de participar activamente en la celebración de las Fiestas Patrias chilenas en Londres, un evento que reunió a la comunidad chilena en el extranjero. La celebración se llevó a cabo en el emblemático Red Lion Café, donde pudimos organizar una serie de actividades para conmemorar nuestras tradiciones, destacando el concurso de cueca, nuestro baile nacional. La convocatoria fue un éxito, con una gran participación de compatriotas y amigos.
 
-Consequatur laboriosam nulla repellendus quidem ut praesentium. Quia inventore atque assumenda neque et corporis ut. Dolores totam rerum sint consectetur sequi. Accusamus et voluptatem veniam fugit esse temporibus maxime voluptates. Sint facilis eligendi veritatis fugiat eos ut ut.
+En el concurso de cueca participaron siete parejas, todas mostrando gran destreza y pasión por nuestra danza. Tras una intensa competición, Omar y Mariela fueron elegidos como la pareja ganadora, quienes tendrán el honor de representar a la comunidad chilena en el Reino Unido en el próximo mundial de cueca. Este evento internacional se realizará en Pamplona, España, a partir del 14 de octubre, y estamos seguros de que representarán nuestra cultura de la mejor manera.
 
-Qui rem maxime modi velit qui similique iusto tenetur. Qui nostrum qui dolor ut. Accusantium et magni consequatur facilis totam. Modi vel ipsam ex. Et officia natus modi vel.
-s
+Desde COFOCHILEX UK, queremos felicitar a Omar y Mariela por su merecido triunfo y desearles la mejor de las suertes en esta competencia internacional. Estamos orgullosos de su esfuerzo y compromiso con nuestras tradiciones, y confiamos en que dejarán en alto el nombre de la comunidad chilena en el Reino Unido.
+
+
+
+As an organisation, COFOCHILEX UK had the honour of actively participating in the celebration of Chilean Independence Day in London, an event that brought together the Chilean community abroad. The celebration took place at the iconic Red Lion Café, where we organised various activities to commemorate our traditions, with the cueca competition, our national dance, standing out as a highlight. The event saw great participation from fellow Chileans and friends.
+
+Seven couples participated in the cueca competition, all showcasing their skill and passion for our dance. After a fierce competition, Omar and Mariela were chosen as the winning couple, and they will have the honour of representing the Chilean community in the United Kingdom at the upcoming World Cueca Championship. This international event will take place in Pamplona, Spain, starting on 14 October, and we are confident they will represent our culture excellently.
+
+From COFOCHILEX UK, we would like to congratulate Omar and Mariela on their well-deserved victory and wish them the best of luck in this international competition. We are proud of their effort and commitment to our traditions, and we trust they will make the Chilean community in the United Kingdom proud.
 
 ![my image](/img/2024-05-18.png)
